--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -2,9 +2,9 @@ name: easy_udp
 description: >
   This library provides a wrapper over RawDatagramSocket
   to gracefully handle UDP connections in dartlang. 😆
-version: 1.2.0
-homepage: https://github.com//xtyxtyx/easy_udp
-author: xuty <xty50337@hotmail.com>
+version: 1.2.1
+homepage: https://github.com/Sungen/easy_udp
+author: wujy <jokerwu.sunny@gmail.com>
 
 environment:
   sdk: '>=2.2.0 <3.0.0'
